--- a/docs/src/content/docs/osb/Miscelleanous/miscellania.mdx
+++ b/docs/src/content/docs/osb/Miscelleanous/miscellania.mdx
@@ -10,6 +10,7 @@ The Kingdom of Miscellania lets your minion gather resources each day in exchang
 - Check your current **approval**, **coffer balance** and how many days have passed since you last collected using `[/activities miscellania status]`.
 - Send your minion to regain approval with `[/activities miscellania approval]` if it has dropped below 100%. Higher approval results in better resource yields.
 - Gather the resources your kingdom has produced with `[/activities miscellania collect]`. You will only receive loot for full days that have passed since your last collection.
+- Assign workers to different tasks with `[/activities miscellania allocate]` to customise your daily resource mix.
 
 ## What do you get?
 
