--- a/docs/src/content/docs/osb/Miscelleanous/buyable-items-and-shop-pricing-mechanics.mdx
+++ b/docs/src/content/docs/osb/Miscelleanous/buyable-items-and-shop-pricing-mechanics.mdx
@@ -3,9 +3,11 @@ title: "Buyable Items and Shop Pricing Mechanics"
 ---
 
 ## Overview
-Buying trips allow your minion to purchase large quantities of certain items over time.
-Most buyables are purchased instantly for a flat GP price. Others simulate shop
-mechanics where prices rise as stock is bought and the minion must world hop.
+Most items bought with `/buy` are delivered instantly at their listed GP price.
+For some resources your minion must travel to in‑game shops. When this happens
+you'll see a confirmation showing the total cost and trip duration. Accepting
+the prompt sends your minion on a timed buying trip that mimics hopping between
+OSRS worlds.
 
 ## Instant Buyables
 Items without `shopQuantity` or `changePer` simply cost their listed `gpCost`.
@@ -20,6 +22,11 @@ Some items come from in game shops and follow Old School RuneScape pricing rules
 - **shopQuantity** – items available before world hopping.
 
 Price increases linearly within a world and resets after each hop.
+
+When a shop buyable is requested the bot shows a summary like
+"Buying **5000 Gold ore** will cost **1,125,000gp** and take about
+**27 minutes**. Continue?" Accepting sends your minion off to hop worlds and buy
+the items.
 
 Example: Arrow shafts start at 1 GP each and increase by 1% per shaft. After
 buying 1000 the average price is around 5.5 GP before hopping.
