Refine shop-buyables docs and cleanup buy trip fields

--- a/docs/src/content/docs/osb/Miscelleanous/buyable-items-and-shop-pricing-mechanics.mdx
+++ b/docs/src/content/docs/osb/Miscelleanous/buyable-items-and-shop-pricing-mechanics.mdx
@@ -44,8 +44,11 @@ Every `shopQuantity` items the minion hops to a new world and pricing starts ove
 - `quantityPerHour: number` – limits trip length
 
 ### Current Shop-Based Buyables
-Arrow shafts, Blood runes, Law runes, Soul runes, Astral runes, Death runes,
-Nature runes and Chaos runes.
+A few notable examples are:
+
+- **Arrow shafts** – bought in bulk with rising prices.
+- **Blood runes** (and other elemental runes).
+- **Gold ore** and other ores sold at shops.
 
 Most items remain simple flat-cost purchases but these shop buyables use the
 `calculateShopBuyCost` function to determine total and average price while
