--- a/docs/src/content/docs/bso/Custom Items/pets.mdx
+++ b/docs/src/content/docs/bso/Custom Items/pets.mdx
@@ -63,7 +63,7 @@ There are pets exclusive to BSO that provide unique and powerful perks and are r
 | [[Flappy]]   | Doubles minigame loot ([see below](#flappyroboflappy-perks)), same as RoboFlappy                 | 2021 Birthday Event                           |
 | [[Cob]]      | 2x Sepulchre & Nightmare speed                                                                   | 2020 Halloween Event                          |
 | [[Gregoyle]] | +20% Gargoyle & Grotesque Guardian kills                                                         | [2021 Halloween](../events/halloween-2021.md) |
-| [[Kuro]]     | +5% Gnome Restaurant & Ourania delivery boost                                                    | 2022 Halloween Event                          |
+| [[Kuro]]     | 2x Gnome Restaurant & +5% Ourania delivery boost                                                 | 2022 Halloween Event                          |
 
 </TabItem>
 <TabItem label="No perks">
