--- a/docs/src/content/docs/osb/Miscellaneous/bingo.mdx
+++ b/docs/src/content/docs/osb/Miscellaneous/bingo.mdx
@@ -103,7 +103,7 @@ You can earn a Trophy (an item you get in your bank) by your performance. You ge
 1. Receive A Revenant Weapon - Receive Any of The Following - Craws Bow (u), Thammaron's Sceptre (u), Viggora's Chainmace (u)
 1. Receive Any Mutagen From Zulrah - Receive Any of The Following - Tanzanite Mutagen, Magma Mutagen
 1. Receive One Piece of Ancestral Robes From CoX - Receive Any of The Following - Ancestral Hat, Ancestral Robe Top, Ancestral Robe Bottom
-1. Receive One Unique Weapon From ToB - Receive Any of The Following - Scythe of vitur (uncharged), Ghrazi rapier, Sanguinesti staff (uncharged)
+1. Receive One Unique Weapon From ToB - Receive Any of The Following - Scythe of Vitur (uncharged), Ghrazi rapier, Sanguinesti staff (uncharged)
 1. Receive Both A Cursed Phalanx and Osmumtens Fang From ToA - Receive All of The Following Items - Cursed Phalanx, Osmumtens Fang
 1. Receive 10k Mahogany Logs -  Receive 10,000 Mahogany Logs From Skilling or PvM
 1. Receive 50 Brimstone Keys - Receive 50 Brimstone Keys From Konar Slayer Tasks
