--- a/docs/src/content/docs/osb/Raids/tob.mdx
+++ b/docs/src/content/docs/osb/Raids/tob.mdx
@@ -16,7 +16,7 @@ You can see your KC, attempts and death chances using [[/raid tob stats]]
 - High level equipment equipped in Melee/Mage/Range
 - At least 100k gp for potential deaths
 - Rune pouch **OR** Divine rune pouch
-- An Abyssal tentacle, Blade of saeldor(c) or Scythe of vitur, and Fire or Infernal cape, in melee gear
+- An Abyssal tentacle, Blade of saeldor(c) or Scythe of Vitur, and Fire or Infernal cape, in melee gear
 - A charged/loaded Toxic blowpipe in your bank, with good darts
 - A magic shortbow or twisted bow in your range gear, with amethyst/rune/dragon arrows
 - At least 250 KC and an Infernal cape for Hard mode
@@ -25,7 +25,7 @@ You can see your KC, attempts and death chances using [[/raid tob stats]]
 - 3 Karambwans per kc, if you're less than 20kc
 - 20+ HP healing food (e.g. sharks) (more if less than 20 kc)
 
-\_- An uncharged scythe will still suffice, however, will only provide a 6% boost compared to the 15% the charged version gives. View [charging items here.](https://wiki.oldschool.gg/osb/miscelleanous/charging-items)
+\_- An uncharged scythe will still suffice, however, will only provide a 6% boost compared to the 15% the charged version gives. View [charging items here.](https://wiki.oldschool.gg/osb/miscellaneous/charging-items)
 
 ---
 
