Fix more wiki pages

--- a/docs/src/content/docs/osb/clues.mdx
+++ b/docs/src/content/docs/osb/clues.mdx
@@ -16,19 +16,19 @@ You can only have a maximum of 100 clues (all clues combined), if you receive mo
 
 ### Beginner Clues
 
-Obor/Bryophyta for guaranteed beginners (requires Giant key/Mossy key respectively).
+Obor and Bryophyta for guaranteed beginners, requires [[Giant key]] and [[Mossy key]] respectively.
 
-Alternatively can kill men/goblins for easies and beginners. It is advised to send shorter trips.
+Alternatively can kill men or goblins for easies and beginners.
 
 ### Easy Clues
 
-Pickpocketing Male HAM Members, send trips of \~50. Average easy clue takes ~1-2 minutes to obtain this way.
+Pickpocket Male or Female HAM Members. Average easy clue takes ~1-2 minutes to obtain this way.
 
 ### Medium Clues
 
-Puro puro is 330 eclectics/hr at high level, resulting in a medium clue every ~5 minutes for time spent. [Tier 2 Patrons](https://www.patreon.com/oldschoolbot) can use `open_until` for the medium clues making this very quick and easy. The `open_until` filter will cap at 100 opens. Meaning, you won't open more than 100 of any item at anytime. You will also get a warning if you have a clue in your bank already.
+Puro puro is 330 eclectics/hr at high level, resulting in a medium clue every ~5 minutes for time spent.
 
-Killing ~100 guards at a time with a cannon is an alternative for slightly slower meds/hour, but doesn't require opening a bunch of implings for the clue.
+Killing guards with a cannon is an alternative for slightly slower meds/hour.
 
 ### Hard Clues
 
@@ -36,7 +36,7 @@ As many hard clues come passively, doing slayer with a good [blocklist](../../sk
 
 ### Elite Clues
 
-Elite clues generally come passively through pvm, as virtually every boss drops elite clues. Vorkath is the best pure elite clues per hour at roughly every 2 hours with all boosts.
+Elite clues generally come passively through pvm, as virtually every boss drops elite clues. Barrows is the best pure elite clues per hour at roughly 1 every hour with all boosts, closely followed by Sarachnis which also drops hard clues.
 
 ### Master Clues
 
