--- a/docs/src/content/docs/osb/combat-achievements.mdx
+++ b/docs/src/content/docs/osb/combat-achievements.mdx
@@ -23,8 +23,8 @@ Rewards can be claimed by using [[/ca claim]] after completing a new tier. You c
 
 <Tabs>
   <TabItem label="Easy">
-    - Ghommal's hilt 1
-    - An antique lamp that gives 5,000xp in any skill above level 20
+    - [[Ghommal's hilt 1]]
+    - An [[Antique lamp]] that gives 5,000xp in any skill above level 20
     - 5% increase to receive Easy clue scrolls
     - Slayer boss tasks are increased by 5 (40 total)
     - Pest control games give 1 bonus point
@@ -32,8 +32,8 @@ Rewards can be claimed by using [[/ca claim]] after completing a new tier. You c
   </TabItem>
 
   <TabItem label="Medium">
-  - Ghommal's hilt 2
-  - An antique lamp that gives 10,000xp in any skill above level 30
+  - [[Ghommal's hilt 2]]
+  - An [[Antique lamp]] that gives 10,000xp in any skill above level 30
   - 5% increase to receive Medium clue scrolls
   - Slayer boss tasks are increased by 5 (45 total)
   - Pest control games give 2 bonus points
@@ -41,8 +41,8 @@ Rewards can be claimed by using [[/ca claim]] after completing a new tier. You c
   </TabItem>
 
   <TabItem label="Hard">
-  - Ghommal's hilt 3
-  - An antique lamp that gives 15,000xp in any skill above level 40
+  - [[Ghommal's hilt 3]]
+  - An [[Antique lamp]] that gives 15,000xp in any skill above level 40
   - 5% increase to receive Hard clue scrolls
   - Slayer boss tasks are increased by 5 (50 total)
   - Pest control games give 3 bonus points
@@ -52,8 +52,8 @@ Rewards can be claimed by using [[/ca claim]] after completing a new tier. You c
 
 
   <TabItem label="Elite">
-  - Ghommal's hilt 4
-  - An antique lamp that gives 25,000xp in any skill above level 50
+  - [[Ghommal's hilt 4]]
+  - An [[Antique lamp]] that gives 25,000xp in any skill above level 50
   - 5% increase to receive Elite clue scrolls
   - Slayer boss tasks are increased by 5 (55 total)
   - Superiors are 25% more likely to appear during Slayer
@@ -63,17 +63,17 @@ Rewards can be claimed by using [[/ca claim]] after completing a new tier. You c
 
 
   <TabItem label="Master">
-  - Ghommal's hilt 5
-  - An antique lamp that gives 35,000xp in any skill above level 60
+  - [[Ghommal's hilt 5]]
+  - An [[Antique lamp]] that gives 35,000xp in any skill above level 60
   - Slayer boss tasks are increased by 5 (60 total)
-  - Ghommal's lucky penny (when equipped, 5% chance to not use a charge on any chargeable item)
+  - [[Ghommal's lucky penny]] (when equipped, 5% chance to not use a charge on any chargeable item)
   - Ability to create Vampyric slayer helmet [[/create item\:Vampyric slayer helmet]]
   - Ability to combine Avernic defender with Ghommal's hilt 5 [[/create item\:Ghommal's avernic defender 5]]
   </TabItem>
 
   <TabItem label="Grandmaster">
-  - Ghommal's hilt 6
-  - An antique lamp that gives 50,000xp in any skill above level 70
+  - [[Ghommal's hilt 6]]
+  - An [[Antique lamp]] that gives 50,000xp in any skill above level 70
   - Slayer boss tasks are increased by 5 (65 total)
   - Ability to create Tzkal slayer helmet [[/create item\:Tzkal slayer helmet]]
   - Ability to combine Avernic defender with Ghommal's hilt 6 [[/create item\:Ghommal's avernic defender 6]]
