Update activities on wiki

--- a/docs/src/content/docs/osb/clues.mdx
+++ b/docs/src/content/docs/osb/clues.mdx
@@ -32,7 +32,7 @@ Killing guards with a cannon is an alternative for slightly slower meds/hour.
 
 ### Hard Clues
 
-As many hard clues come passively, doing slayer with a good [blocklist](../../skills/slayer/) is the recommended way to obtain hard clues, as superiors will result in quite a few totem pieces for the guaranteed hard clues from skotizo. If you'd rather not do slayer, the best method for hard clues/hr is to barrage Warped Jellies.
+As many hard clues come passively, doing slayer with a good [blocklist](/osb/skills/slayer/readme/#recommended-blockskip-list) is the recommended way to obtain hard clues, as superiors will result in quite a few totem pieces for the guaranteed hard clues from skotizo. If you'd rather not do slayer, the best method for hard clues/hr is to barrage Warped Jellies.
 
 ### Elite Clues
 
