--- a/docs/src/content/docs/osb/clues.mdx
+++ b/docs/src/content/docs/osb/clues.mdx
@@ -8,43 +8,45 @@ You can send your minion to complete clue scrolls in your bank using [[/clue]]. 
 
 ## Clue Stacking/Juggling
 
-In OSRS, you can "juggle" clues as a method to stack them. Your minion will stack clues in your bank up to a total maximum of 100 clues of any tier, these clues are seen as being juggled by your minion, which is what allows them to stack in your bank.
+In OSRS, you can "juggle" clues as a method to stack them. Your minion will stack clues in your bank up to a total maximum of 100 clues of any tier. These clues are seen as being juggled by your minion, which is what allows them to stack in your bank.
 
-You can only have a maximum of 100 clues (all clues combined), if you receive more clues after hitting this limit, your minion will automatically drop lower tier clues to make way for higher tier clues. For example, if you have 50 Easy Clues and 50 Medium clues in your bank, you are at the limit of 100, however if your minion gets a hard clue drop, it will drop an easy clue, so it can fit the hard clue within the limit.
+You can only have a maximum of 100 clues (all clues combined). If you receive more clues after hitting this limit, your minion will automatically drop lower-tier clues to make way for higher-tier clues. For example, if you have 50 Easy clues and 50 Medium clues in your bank, you are at the limit of 100. However, if your minion gets a Hard clue drop, it will drop an Easy clue so it can fit the Hard clue within the limit.
 
-## Where To Get Clues
+## Where to Get Clues
 
 ### Beginner Clues
 
-Obor and Bryophyta for guaranteed beginners, requires [[Giant key]] and [[Mossy key]] respectively.
+- Obor and Bryophyta provide guaranteed Beginner clues, which require a [[Giant key]] and [[Mossy key]], respectively.
 
-Alternatively can kill men or goblins for easies and beginners.
+- Alternatively, you can kill men or goblins for Easy and Beginner clues.
 
 ### Easy Clues
 
-Pickpocket Male or Female HAM Members. Average easy clue takes ~1-2 minutes to obtain this way.
+- Pickpocket Male or Female HAM Members. The average Easy clue takes approximately 1–2 minutes to obtain this way.
 
 ### Medium Clues
 
-Puro puro is 330 eclectics/hr at high level, resulting in a medium clue every ~5 minutes for time spent.
+- Puro-Puro yields about 330 Eclectic implings per hour at high level, resulting in a Medium clue every ~5 minutes for time spent.
 
-Killing guards with a cannon is an alternative for slightly slower meds/hour.
+- Killing guards with a cannon is an alternative for slightly slower Medium clues per hour.
 
 ### Hard Clues
 
-As many hard clues come passively, doing slayer with a good [blocklist](/osb/skills/slayer/readme/#recommended-blockskip-list) is the recommended way to obtain hard clues, as superiors will result in quite a few totem pieces for the guaranteed hard clues from skotizo. If you'd rather not do slayer, the best method for hard clues/hr is to barrage Warped Jellies.
+- As many Hard clues come passively, doing Slayer with a good [blocklist](/osb/skills/slayer/readme/#recommended-blockskip-list) is the recommended way to obtain Hard clues, as superiors will result in quite a few totem pieces for the guaranteed Hard clues from Skotizo. 
+
+- If you'd rather not do Slayer, the best method for Hard clues per hour is to barrage Warped Jellies.
 
 ### Elite Clues
 
-Elite clues generally come passively through pvm, as virtually every boss drops elite clues. Barrows is the best pure elite clues per hour at roughly 1 every hour with all boosts, closely followed by Sarachnis which also drops hard clues.
+- Elite clues generally come passively through PvM, as virtually every boss drops Elite clues. Barrows is the best pure Elite clues per hour at roughly one every hour with all boosts, closely followed by Sarachnis, which also drops Hard clues.
 
 ### Master Clues
 
-Master clues can be created using an easy, medium, hard, and elite clue scroll: [[/create item\:Master clue]]. However, this is generally not recommended, as getting masters passively through other clue completions is a much more efficient way to obtain them.
+- Master clues can be created using an Easy, Medium, Hard, and Elite clue scroll: [[/create item\:Master clue]]. However, this is generally not recommended, as getting Masters passively through other clue completions is a much more efficient way to obtain them.
 
 ## Implings
 
-It is possible to run multiple clues in one trip using banked implings, your minion will complete a clue, then open jars during the trip to do more clues. You can select your desired clue type, and then the tier of impling which you wish to use. For example: [[/clue tier\:Medium implings\:Eclectic impling jar]]
+It is possible to run multiple clues in one trip using banked implings. Your minion will complete a clue, then open jars during the trip to do more clues. You can select your desired clue type and then the tier of impling you wish to use. For example: [[/clue tier\:Medium implings\:Eclectic impling jar]].
 
 ## Boosts
 
