--- a/docs/src/content/docs/osb/Miscellaneous/miscellania.mdx
+++ b/docs/src/content/docs/osb/Miscellaneous/miscellania.mdx
@@ -17,8 +17,8 @@ The Kingdom of Miscellania lets your minion gather resources each day in exchang
 Every day a small amount of GP is withdrawn (5 GP plus 10% of your remaining coffer, up to 50k or 75k depending on whether Royal Trouble is complete). This determines your worker effectiveness. By default you have ten workers split evenly between **woodcutting** and **mining**. They can also gather fish, herbs, seeds, flax and hardwood. The resources you receive scale with your approval and the GP spent.
 
 You can preview potential loot using the simulation command. By default it assumes full approval and the
-standard worker split, but you can customise these:
-`[/simulate miscellania days:7 approval:80 woodcutting:5 mining:5]` would show a week of loot with 80%
-approval and five workers on both woodcutting and mining.
+standard worker split, but you can customise these. For example:
+`[/simulate miscellania days:7 approval:80 ten_workers:herbs five_workers:mining]`
+would show a week of loot with 80% approval, assigning ten workers to herbs and five to mining.
 
 Make sure to top up your coffer and maintain your approval to keep your kingdom running efficiently!
