--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -18,6 +18,8 @@ Minions are entirely virtual, and not in any way tradeable for real GP or real m
 
 Next, decide what you want to do. Skilling? PVM? Questing? Have a look around the rest of the wiki to see what you can do, and how - and just do whatever you want to do!
 
+For a guide on items you can buy from the bot and how shop pricing works, check out [Buyable Items and Shop Pricing Mechanics](./osb/Buyables/buyable-items-and-shop-pricing-mechanics).
+
 ## Patreon/Sponsor
 
 You can support development of the bot on [patreon](https://www.patreon.com/oldschoolbot) or [github](https://github.com/sponsors/gc)
