--- a/docs/src/content/docs/getting-started/BSO.mdx
+++ b/docs/src/content/docs/getting-started/BSO.mdx
@@ -111,28 +111,31 @@ These BSO-exclusive master skillcapes provide varying perks to each skill, along
 They can be purchased when you have 500m xp in a skill and cost 1b GP. The command to purchase one is `=skillcape hunter master cape` for example. These capes are untradeable.
 Skills with missing perks are either yet to be added or still unknown.
 
-- Attack: 15% speed boost to all PVM trips
-- Strength:
-- Defence:
-- Hitpoints:
-- Ranged:
-- Prayer: 40% Less Prayer Potions consumed when using Dwarven Blessing
-- Magic:
-- Runecrafting:
-- Construction:
-- Agility: Acts as a set of full graceful
-- Herblore:
+- Attack: 15% speed boost to all non-boss PvM trips while training melee
+- Strength: 15% speed boost to Mad Marimbo's Monkey Rumble
+- Defence: Perk not yet added
+- Hitpoints: Extends most PvM, Wintertodt, Barbarian Assault, Hallowed Sepulchre, Soul Wars, and pickpocketing trips by 20%; extends bossing and Dungeoneering trips by 10%
+- Ranged: 90% reduced arrow usage and 15% speed boost to all non-boss PvM trips while training ranged
+- Prayer: 40% fewer Prayer potions consumed when using the Dwarven Blessing
+- Magic: Voidling pet alches 3x faster when equipped and provides a 15% speed boost to all non-boss PvM trips while training magic
+- Runecrafting: 2x speed boost to Runecrafting and the Order of Dis (ODS) minigame
+- Construction: Nursery eggs hatch 2x faster
+- Agility: Counts as wearing a full set of Graceful
+- Herblore: 10% extra finished potions when mixing
 - Thieving: 30% speed boost to Thieving
-- Crafting:
-- Fletching:
-- Slayer:
-- Hunter: 2x speed boost to Hunting
-- Mining:
-- Smithing:
-- Fishing: 4x loot and mystery boxes from Fishing Trawler
-- Cooking: 5x speed boost to Cooking
+- Crafting: Perk not yet added
+- Fletching: Perk not yet added
+- Slayer: 2x superior monsters encountered on task
+- Hunter: 2x hunting speed, +4 birdhouses, 2x Sand Gecko loot when Sandy is equipped, and 2x impling loot
+- Mining: 2x golden nuggets and minerals
+- Smithing: 2x boost to the Blast Furnace, halves smelting failure rates, and grants a 15% boost to Giants' Foundry
+- Fishing: 4x loot and Mystery Boxes from Fishing Trawler
+- Cooking: 5x cooking speed
 - Firemaking: 2x loot from Wintertodt
-- Woodcutting: 2x loot from Woodcutting
-- Farming:
+- Woodcutting: 2x woodcutting loot
+- Farming: 15% seeds saved (50% with the Scroll of Life) and a 1/10 chance per planted seed to receive a Mystery Box
+- Dungeoneering: 10% speed boost with a Scroll of Teleportation and 50% more common Gorajan shards
+- Invention: 5% faster disassembly, 5% reduced junk chance, and 5% materials saved
+- Divination: 5% speed boost
 
 Note: Master cape perks do not currently include the orginal skillcape's perks, so you must equip one in skilling and one in misc to get the effects of both.
