--- a/docs/src/content/docs/getting-started/BSO.mdx
+++ b/docs/src/content/docs/getting-started/BSO.mdx
@@ -41,7 +41,7 @@ Some items are unique to BSO due to custom bosses, mechanic changes, and drop ta
 - Abyssal Equipment: Abyssal items are BSO-exclusive boost items which are dropped or have component drops from Malygos. The **Abyssal Cape** provides a 50% food consumption reduction against any bosses which require food. **Abyssal Dragon Bones** provide 5x more xp than Superior Dragon Bones, the next best prayer method. The **Abyssal Pouch** is created using a Giant Pouch and **Abyssal Thread**, and it provides a significant boost to your runecrafting speed.
 
 - XP Lamps:
-  Dailies can provide you with XP **lamps** (tiny, small, average, large, and huge) which can be placed in most skills after a short time has passed from the point of their release. These provide 20k, 50k, 100k, 1m, and 5m xp respectively. They are very rare and are used by `=lamp size lamp, skill`.
+  Dailies can provide you with XP **lamps** (tiny, small, average, large, and huge) which can be placed in most skills after a short time has passed from the point of their release. These provide 20k, 50k, 100k, 1m, and 5m xp respectively. They are very rare and are used via [[/minion lamp item\:<lamp name> skill\:<skill name>]] (select the lamp and skill you want from the slash command options).
 
 - Clues:
   Clues are stackable, _and_ there is a new tier of clue, **Grandmaster**. Grandmaster clues require you to complete 50 Master clue scrolls before you can attempt them. They have a unique drop table including some BSO exclusive items such as the **Clue Hunter Outfit** which halves time to complete clue scrolls, and the **Dwarven Blessing** which provides a 20% speed boost to all PvM activities at a cost of 1x Prayer Potion (4) per 5 minutes of the trip.
@@ -108,7 +108,7 @@ These BSO-exclusive pets provide some unqiue and powerful perks and are rare dro
 
 These BSO-exclusive master skillcapes provide varying perks to each skill, along with a global XP boost: +8% XP when training the corresponding skill and +3% XP to all other skills. This boost is always active while the cape is equipped in any gear tab.
 
-They can be purchased when you have 500m XP in a skill and cost 1b GP. The command to purchase one is `=skillcape hunter master cape` for example. These capes are untradeable.
+They can be purchased when you have 500m XP in a skill and cost 1b GP. The command to purchase one is [[/buy name\:Hunter master cape]] for example. These capes are untradeable.
 Skills with missing perks are either yet to be added or still unknown.
 
 - **Attack**: 15% speed boost to all non-boss PvM trips while training melee
