--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -2262,6 +2262,8 @@ Melee gear boosts:
 
 - [[Torva platelegs]] or [[Bandos tassets]]
 
+- [[Scythe of vitur]]
+
 **Required Quests**
 
 - Desert Treasure II - The Fallen Empire
