--- a/docs/src/content/docs/osb/clues.mdx
+++ b/docs/src/content/docs/osb/clues.mdx
@@ -38,7 +38,7 @@ You can only have a maximum of 100 clues (all clues combined). If you receive mo
 
 ### Elite Clues
 
-- Elite clues generally come passively through PvM, as virtually every boss drops Elite clues. Barrows is the best pure Elite clues per hour at roughly one every hour with all boosts, closely followed by Sarachnis, which also drops Hard clues.
+- Elite clues generally come passively through PvM, as virtually every boss drops Elite clues. Sarachnis is now the best pure Elite clues per hour, yielding roughly 1.2 Elite clues per hour with maximum boosts (about 71 kills per hour at a 1/60 drop rate) and also providing Hard clues; Barrows remains a solid alternative at roughly one Elite clue per hour.
 
 ### Master Clues
 
