--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -4,6 +4,8 @@ title: Old School Bot Wiki
 
 Old School Bot is a discord bot based around Old School RuneScape. It has fun and useful commands, such as showing your account stats or simulating the loot from monsters and clues. Old School Bot is free and open-source.
 
+test
+
 ## Minions
 
 Minions are a feature in Old School Bot that let you simulate playing a virtual RuneScape account in Discord. You control a minion, who you send out to do various tasks, like killing monsters for loot, completing clue scrolls, and training skills. With the loot they get, you can craft items, sell them, and trade to other real players.
