Revert wiki script short-circuit logic

--- a/docs/src/content/docs/osb/Buyables/buyable-items-and-shop-pricing-mechanics.mdx
+++ b/docs/src/content/docs/osb/Buyables/buyable-items-and-shop-pricing-mechanics.mdx
@@ -3,7 +3,7 @@ title: "Buyable Items and Shop Pricing Mechanics"
 ---
 
 ## Overview
-Most items bought with `/buy` are delivered instantly at their listed GP price.
+Most items bought with [[/buy]] are delivered instantly at their listed GP price.
 For some resources your minion must travel to in‑game shops. When this happens
 you'll see a confirmation showing the total cost and trip duration. Accepting
 the prompt sends your minion on a timed buying trip that mimics hopping between
