--- a/docs/src/content/docs/osb/Skills/mining.mdx
+++ b/docs/src/content/docs/osb/Skills/mining.mdx
@@ -109,70 +109,73 @@ The only other thing unidentified minerals can be used to purchase are:
 | Gem rock | 99 | 115,000 | Yes | Karamja Medium |  |
 | Gem rock | 90 | 107,000 | Yes | Karamja Medium |  |
 | Granite | 80 | 105,000 | Yes |  |  |
-| Gem rock | 99 | 98,000 | No | Karamja Medium | 47x Uncut diamond, 59x Uncut emerald, 354x Uncut jade, 709x Uncut opal, 178x Uncut red topaz, 59x Uncut ruby, 106x Uncut sapphire |
+| Gem rock | 99 | 98,000 | No | Karamja Medium | 47x Uncut diamond, 59x Uncut emerald, 354x Uncut jade, 708x Uncut opal, 178x Uncut red topaz, 60x Uncut ruby, 107x Uncut sapphire |
 | Gem rock | 80 | 97,000 | Yes | Karamja Medium |  |
 | Granite | 70 | 94,000 | Yes |  |  |
 | Sandstone | 99 | 93,000 | Yes |  |  |
-| Gem rock | 90 | 92,000 | No | Karamja Medium | 44x Uncut diamond, 56x Uncut emerald, 333x Uncut jade, 663x Uncut opal, 166x Uncut red topaz, 55x Uncut ruby, 100x Uncut sapphire |
+| Gem rock | 90 | 92,000 | No | Karamja Medium | 45x Uncut diamond, 56x Uncut emerald, 332x Uncut jade, 664x Uncut opal, 166x Uncut red topaz, 56x Uncut ruby, 100x Uncut sapphire |
 | Gem rock | 70 | 87,000 | Yes | Karamja Medium |  |
 | Sandstone | 90 | 86,000 | Yes |  |  |
-| Gem rock | 80 | 85,000 | No | Karamja Medium | 41x Uncut diamond, 52x Uncut emerald, 307x Uncut jade, 611x Uncut opal, 152x Uncut red topaz, 51x Uncut ruby, 93x Uncut sapphire |
-| Sandstone | 99 | 83,000 | No |  | 464x Sandstone (10kg), 463x Sandstone (1kg), 463x Sandstone (2kg), 463x Sandstone (5kg) |
+| Gem rock | 80 | 85,000 | No | Karamja Medium | 42x Uncut diamond, 51x Uncut emerald, 306x Uncut jade, 612x Uncut opal, 154x Uncut red topaz, 52x Uncut ruby, 92x Uncut sapphire |
+| Sandstone | 99 | 83,000 | No |  | 463x Sandstone (10kg), 464x Sandstone (1kg), 463x Sandstone (2kg), 463x Sandstone (5kg) |
 | Iron ore | 80 | 82,000 | Yes |  | 24x Unidentified minerals |
-| Iron ore | 70 | 81,000 | Yes |  | 24x Unidentified minerals |
+| Iron ore | 70 | 81,000 | Yes |  | 23x Unidentified minerals |
 | Sandstone | 80 | 78,000 | Yes |  |  |
-| Gem rock | 70 | 77,000 | No | Karamja Medium | 37x Uncut diamond, 47x Uncut emerald, 278x Uncut jade, 554x Uncut opal, 138x Uncut red topaz, 47x Uncut ruby, 83x Uncut sapphire |
-| Sandstone | 80 | 71,000 | No |  | 395x Sandstone (10kg), 393x Sandstone (1kg), 394x Sandstone (2kg), 394x Sandstone (5kg) |
+| Gem rock | 70 | 77,000 | No | Karamja Medium | 38x Uncut diamond, 47x Uncut emerald, 277x Uncut jade, 553x Uncut opal, 139x Uncut red topaz, 47x Uncut ruby, 84x Uncut sapphire |
+| Sandstone | 80 | 71,000 | No |  | 394x Sandstone (10kg), 393x Sandstone (1kg), 394x Sandstone (2kg), 393x Sandstone (5kg) |
 | Sandstone | 70 | 68,000 | Yes |  |  |
-| Granite | 99 | 66,000 | No |  | 364x Granite (2kg), 366x Granite (500g), 365x Granite (5kg) |
-| Granite | 90 | 63,000 | No |  | 351x Granite (2kg), 351x Granite (500g), 350x Granite (5kg) |
-| Sandstone | 70 | 63,000 | No |  | 349x Sandstone (10kg), 349x Sandstone (1kg), 349x Sandstone (2kg), 349x Sandstone (5kg) |
-| Granite | 80 | 60,000 | No |  | 331x Granite (2kg), 333x Granite (500g), 333x Granite (5kg) |
+| Granite | 99 | 66,000 | No |  | 365x Granite (2kg), 367x Granite (500g), 365x Granite (5kg) |
+| Granite | 90 | 63,000 | No |  | 350x Granite (2kg), 352x Granite (500g), 350x Granite (5kg) |
+| Sandstone | 70 | 63,000 | No |  | 350x Sandstone (10kg), 351x Sandstone (1kg), 349x Sandstone (2kg), 350x Sandstone (5kg) |
+| Granite | 80 | 60,000 | No |  | 332x Granite (2kg), 333x Granite (500g), 333x Granite (5kg) |
 | Iron ore | 80 | 58,000 | No |  | 1.7k Iron ore, 17x Unidentified minerals |
 | Silver ore | 99 | 58,000 | Yes |  |  |
 | Iron ore | 70 | 57,000 | No |  | 1.6k Iron ore, 17x Unidentified minerals |
-| Granite | 70 | 56,000 | No |  | 311x Granite (2kg), 311x Granite (500g), 311x Granite (5kg) |
+| Granite | 70 | 56,000 | No |  | 311x Granite (2kg), 312x Granite (500g), 310x Granite (5kg) |
 | Silver ore | 90 | 54,000 | Yes |  |  |
 | Silver ore | 99 | 53,000 | No |  | 1.3k Silver ore |
 | Silver ore | 80 | 50,000 | Yes |  |  |
 | Silver ore | 80 | 47,000 | No |  | 1.2k Silver ore |
-| Coal | 99 | 45,000 | Yes |  | 15x Unidentified minerals |
+| Coal | 99 | 44,000 | Yes |  | 15x Unidentified minerals |
 | Silver ore | 70 | 44,000 | Yes |  |  |
-| Coal | 90 | 42,000 | Yes |  | 14x Unidentified minerals |
+| Coal | 90 | 42,000 | Yes |  | 15x Unidentified minerals |
 | Gold ore | 99 | 42,000 | Yes |  |  |
 | Silver ore | 70 | 42,000 | No |  | 1.1k Silver ore |
-| Gold ore | 99 | 40,000 | No |  | 620x Gold ore |
+| Gold ore | 99 | 40,000 | No |  | 622x Gold ore |
 | Coal | 80 | 38,000 | Yes |  | 13x Unidentified minerals |
 | Copper ore | 70 | 38,000 | Yes |  |  |
 | Gold ore | 90 | 38,000 | Yes |  |  |
 | Tin ore | 70 | 38,000 | Yes |  |  |
-| Gold ore | 90 | 37,000 | No |  | 577x Gold ore |
-| Coal | 90 | 36,000 | No |  | 727x Coal, 13x Unidentified minerals |
+| Gold ore | 90 | 37,000 | No |  | 576x Gold ore |
+| Coal | 90 | 36,000 | No |  | 729x Coal, 13x Unidentified minerals |
 | Gold ore | 80 | 35,000 | Yes |  |  |
 | Coal | 70 | 34,000 | Yes |  | 12x Unidentified minerals |
 | Gold ore | 80 | 34,000 | No |  | 524x Gold ore |
 | Mithril ore | 99 | 32,000 | Yes |  |  |
-| Coal | 70 | 30,000 | No |  | 610x Coal, 11x Unidentified minerals |
+| Coal | 70 | 30,000 | No |  | 611x Coal, 11x Unidentified minerals |
 | Gold ore | 70 | 30,000 | Yes |  |  |
 | Mithril ore | 90 | 30,000 | Yes |  |  |
 | Tainted essence chunk | 70 | 30,000 | Yes |  |  |
+| Gold ore | 70 | 29,000 | No |  | 458x Gold ore |
 | Mithril ore | 90 | 28,000 | No |  | 353x Mithril ore |
 | Mithril ore | 80 | 27,000 | Yes |  |  |
 | Tainted essence chunk | 70 | 27,000 | No |  | 22.6k Tainted essence chunk |
 | Mithril ore | 80 | 25,000 | No |  | 322x Mithril ore |
+| Mithril ore | 70 | 24,000 | Yes |  |  |
 | Iron ore | 40 | 23,000 | Yes |  |  |
-| Mithril ore | 70 | 23,000 | Yes |  |  |
 | Amethyst | 99 | 22,000 | Yes |  | 5x Unidentified minerals |
-| Mithril ore | 70 | 22,000 | No |  | 283x Mithril ore |
+| Mithril ore | 70 | 22,000 | No |  | 285x Mithril ore |
+| Adamantite ore | 99 | 20,000 | Yes |  |  |
 | Gem rock | 40 | 20,000 | Yes | Karamja Medium |  |
 | Iron ore | 40 | 20,000 | No |  | 591x Iron ore |
-| Adamantite ore | 99 | 19,000 | Yes |  |  |
+| Adamantite ore | 99 | 19,000 | No |  | 202x Adamantite ore |
 | Copper ore | 70 | 19,000 | No |  | 1.1k Copper ore |
 | Tin ore | 70 | 19,000 | No |  | 1.1k Tin ore |
 | Adamantite ore | 90 | 18,000 | Yes |  |  |
 | Adamantite ore | 90 | 17,000 | No |  | 186x Adamantite ore |
 | Daeyalt essence rock | 70 | 17,000 | Yes |  | 8.5k Daeyalt shard |
 | Adamantite ore | 80 | 16,000 | Yes |  |  |
+| Adamantite ore | 80 | 15,000 | No |  | 167x Adamantite ore |
 | Sandstone | 40 | 15,000 | Yes |  |  |
 | Adamantite ore | 70 | 14,000 | Yes |  |  |
 | Adamantite ore | 70 | 13,000 | No |  | 145x Adamantite ore |
@@ -183,7 +186,7 @@ The only other thing unidentified minerals can be used to purchase are:
 | Runite ore | 90 | 12,000 | Yes | COTS |  |
 | Silver ore | 40 | 12,000 | Yes |  |  |
 | Clay | 70 | 11,000 | Yes |  |  |
-| Copper ore | 40 | 10,000 | No |  | 570x Copper ore |
+| Copper ore | 40 | 10,000 | No |  | 571x Copper ore |
 | Daeyalt essence rock | 70 | 10,000 | No |  | 5k Daeyalt shard |
 | Pure essence | 70 | 10,000 | Yes |  |  |
 | Rune essence | 70 | 10,000 | Yes |  |  |
@@ -205,7 +208,7 @@ The only other thing unidentified minerals can be used to purchase are:
 | Pure essence | 40 | 3,000 | Yes |  |  |
 | Rune essence | 1 | 3,000 | Yes |  |  |
 | Clay | 1 | 2,000 | Yes |  |  |
-| Clay | 1 | 1,000 | No |  | 353x Clay |
+| Clay | 1 | 1,000 | No |  | 354x Clay |
 | Saltpetre | 1 | 0 | Yes |  |  |
 
 <!-- DO NOT EDIT - This section is auto-generated by the build script -->
