--- a/docs/src/content/docs/bso/Custom Items/pets.mdx
+++ b/docs/src/content/docs/bso/Custom Items/pets.mdx
@@ -125,7 +125,7 @@ There are pets exclusive to BSO that provide unique and powerful perks and are r
 | [[Saradomin Owl]] | Hatched from Saradomin Egg                                                                                                    |
 | [[Guthix Raptor]] | Hatched from Guthix Egg                                                                                                       |
 | [[Zamorak Hawk]]  | Hatched from Zamorak Egg                                                                                                      |
-| [[Penguin]]       | Hatched from Penguin Egg                                                                                                      |
+| [[Skip]]       | Hatched from Penguin Egg                                                                                                      |
 
 ## Meme pets & no-perk pets
 
