--- a/docs/src/content/docs/osb/combat-achievements.mdx
+++ b/docs/src/content/docs/osb/combat-achievements.mdx
@@ -7,7 +7,7 @@ tableOfContents: false
 
 import { Tabs, TabItem } from "@astrojs/starlight/components";
 
-You can complete almost all the same combat achievements in the bot as in the real game. However, the method to obtain some achievements is different, as the bot simply cannot reflect the nature of all tasks. If there is a random chance to complete an achievement, it will be displayed in the below table. There may be further conditions, such as equipping specific items (typically allows any setup). 
+You can complete almost all the same combat achievements in the bot as in the real game. However, the method to obtain some achievements is different, as the bot simply cannot reflect the nature of all tasks. If there is a random chance to complete an achievement, it will be displayed in the below table. There may be further conditions, such as equipping specific items (typically allows any setup).
 
 Some tasks (usually KC-based tasks) are claimed retroactively by using: [[/ca claim]].
 
@@ -78,8 +78,8 @@ Rewards can be claimed by using [[/ca claim]] after completing a new tier. You c
   </TabItem>
 </Tabs>
 
-import { Leagues } from "../../../components/Leagues";
+import { CombatAchievements } from "../../../components/CombatAchievements";
 
 ## Combat Achievements
 
-<Leagues client:load />
+<CombatAchievements client:load />
