Add required degradeables to monsters page requirements

--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -2266,6 +2266,10 @@ Melee gear boosts:
 
 - Desert Treasure II - The Fallen Empire
 
+**Required Degradeable/Chargeable Items**
+
+Melee gear (one of): [[Scythe of vitur]]
+
 </TabItem>
 <TabItem label="Boosts">
     <details>
@@ -3827,6 +3831,10 @@ You can have one of the following boosts:
     [[qp\:215]]
 
 [[prayer\:43]] [[agility\:69]] [[thieving\:64]] [[hunter\:56]] [[firemaking\:66]] [[mining\:72]] [[construction\:35]] [[magic\:66]] [[cooking\:62]] [[fishing\:62]] [[smithing\:65]] [[crafting\:40]] [[runecraft\:50]] [[fletching\:50]]
+
+**Required Degradeable/Chargeable Items**
+
+Mage gear (one of): [[Tumeken's shadow]] or [[Sanguinesti staff]] or [[Trident of the swamp]]
 
 </TabItem>
 <TabItem label="Boosts">
@@ -5402,6 +5410,10 @@ Range gear boosts:
 
 - Desert Treasure II - The Fallen Empire
 
+**Required Degradeable/Chargeable Items**
+
+Mage gear (one of): [[Tumeken's shadow]] or [[Sanguinesti staff]]
+
 </TabItem>
 <TabItem label="Boosts">
     <details>
@@ -5527,6 +5539,10 @@ Range gear boosts:
 **Required Quests**
 
 - Desert Treasure II - The Fallen Empire
+
+**Required Degradeable/Chargeable Items**
+
+Mage gear (one of): [[Tumeken's shadow]] or [[Sanguinesti staff]]
 
 </TabItem>
 <TabItem label="Boosts">
@@ -6166,6 +6182,10 @@ Melee gear boosts:
 **Required Quests**
 
 - Desert Treasure II - The Fallen Empire
+
+**Required Degradeable/Chargeable Items**
+
+Melee gear (one of): [[Scythe of vitur]]
 
 </TabItem>
 <TabItem label="Boosts">
