Increase Woodcutting Guild axe trip rates

--- a/docs/src/content/docs/osb/Buyables/trip-buyables.mdx
+++ b/docs/src/content/docs/osb/Buyables/trip-buyables.mdx
@@ -16,6 +16,9 @@ Below is a list of every trip buyable, a ready-to-copy [[/buy]] command, and the
 | [[Bucket of sand?raw]] Bucket of sand | [[/buy name\:Bucket of sand]] | 5 | 3,250 | 10 | 2 |
 | [[Soda ash?raw]] Soda ash | [[/buy name\:Soda ash]] | 5 | 3,250 | 10 | 2 |
 | [[Arrow shaft?raw]] Arrow shaft | [[/buy name\:Arrow shaft]] | 1 | 400,000 | 1,000 | 1 |
+| [[Mithril axe?raw]] Mithril axe | [[/buy name\:Mithril axe]] | 1,664 | 200 | 1 | 1 |
+| [[Adamant axe?raw]] Adamant axe | [[/buy name\:Adamant axe]] | 4,096 | 200 | 1 | 1 |
+| [[Rune axe?raw]] Rune axe | [[/buy name\:Rune axe]] | 40,960 | 200 | 1 | 1 |
 | [[Copper ore?raw]] Copper ore | [[/buy name\:Copper ore]] | 4 | 11,000 |  |  |
 | [[Tin ore?raw]] Tin ore | [[/buy name\:Tin ore]] | 4 | 11,000 |  |  |
 | [[Iron ore?raw]] Iron ore | [[/buy name\:Iron ore]] | 25 | 11,000 |  |  |
