Fix Skipper perk effects

--- a/docs/src/content/docs/getting-started/BSO.mdx
+++ b/docs/src/content/docs/getting-started/BSO.mdx
@@ -89,7 +89,7 @@ These BSO-exclusive pets provide some unqiue and powerful perks and are rare dro
 - Scruffy: obtained from Varrock agility, boosts fletching speed
 - Zak: obtained from smelting, boosts maximum trip length by 40%
 - Hammy: obtained from sacrificing items in excess of 51,530,000 gp, gives free plank-making at sawmills and has a chance to interrupt commands
-- Skipper: obtained from penguin agility, removes tax from item sales to the bot, adds 40% sacrifice value, and gives more gp on dailies (passive)
+- Skipper: obtained from penguin agility, reduces tax on item sales to the bot by 15%, adds 30% sacrifice value, and gives 50% more GP on dailies (passive)
 - Ori: obtained from killing Malygos, boosts loot from pvm trips by 25% (rounding up)
 - Takon: obtained from completing the Chambers of Xeric, boosts smithing by 5x
 - Obis: obtained from runecrafting, gives random runes on any non-pvm trip and 2x boost to Zalcano
