--- a/docs/src/content/docs/osb/Buyables/buyables.mdx
+++ b/docs/src/content/docs/osb/Buyables/buyables.mdx
@@ -15,4 +15,4 @@ Prices are inflated in comparison to Oldschool RuneScape to act as more of a GP 
 
 ## List of Buyables
 
-<Buyables client:load />
+<Buyables client:only />
